cti client diamond ADD SOMETHING